--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,7 +30,8 @@ target 'FirebaseAuthApp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
+  pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
 
   target 'FirebaseAuthAppTests' do
     inherit! :search_paths
