--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,10 +173,12 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-gesture-handler')
+    implementation project(':@react-native-community_geolocation')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
-
+    implementation project(':react-native-maps')
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    
     // JSC from node_modules
     if (useIntlJsc) {
         implementation 'org.webkit:android-jsc-intl:+'
