--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "prepare": "patch-package"
   },
   "dependencies": {
-    "@react-native-firebase/app": "6.0.3",
-    "@react-native-firebase/auth": "^6.0.0-alpha.25",
+    "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-firebase/app": "^6.0.3",
+    "@react-native-firebase/auth": "^6.0.3",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.5.0",
-    "react-navigation": "^4.0.10"
+    "react-native-google-fit": "^0.9.15",
+    "react-native-maps": "^0.26.1",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
